--- a/styles/style.css
+++ b/styles/style.css
@@ -125,3 +125,29 @@ body {
 .socials-image-body {
   @apply bg-main-light p-6;
 }
+
+.service {
+  @apply mr-4 w-1/2 border-4 border-white-light hover:border-val flex flex-col justify-items-stretch items-stretch h-64 transition-all;
+}
+
+.service-footer {
+  @apply w-full
+  bg-main-light
+  text-white
+  font-black
+  text-xl
+  px-4
+  p-3
+  transition-all;
+}
+
+.service:hover .service-footer {
+  @apply bg-val;
+}
+
+.service-icons {
+  @apply w-full
+                    flex-1 flex flex-row
+                    justify-evenly
+                    items-center;
+}
