--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,8 @@ body {
         text-text-nav
         flex flex-row
         items-center
+        justify-center
+        md:justify-items-start
         transition-all z-50;
 }
 
@@ -35,7 +37,7 @@ body {
 }
 
 .section-header {
-  @apply text-white text-5xl uppercase font-black tracking-tighter;
+  @apply text-white text-3xl md:text-5xl uppercase font-black tracking-tighter;
 }
 
 .card {
@@ -85,11 +87,13 @@ body {
 }
 
 .decoration {
-  position: absolute;
+  @apply absolute hidden
+  md:block;
 }
 
 .decoration-p3ntest {
   top: calc(100vh + 10rem);
+  left: 0
 }
 
 .divider {
@@ -97,7 +101,7 @@ body {
 }
 
 .socials {
-  @apply w-80
+  @apply w-full md:w-80
               bg-main-dark
               flex flex-row
               items-stretch
@@ -127,7 +131,7 @@ body {
 }
 
 .service {
-  @apply mr-4 w-1/2 border-4 border-white-light hover:border-val flex flex-col justify-items-stretch items-stretch h-64 transition-all;
+  @apply mr-4 mb-7 md:mb-0 md:w-1/2 border-4 border-white-light hover:border-val flex flex-col justify-items-stretch items-stretch h-64 transition-all;
 }
 
 .service-footer {
@@ -135,7 +139,8 @@ body {
   bg-main-light
   text-white
   font-black
-  text-xl
+  text-lg
+  md:text-xl
   px-4
   p-3
   transition-all;
@@ -153,7 +158,7 @@ body {
 }
 
 .review {
-  @apply bg-black p-5 pl-7 text-text-onblack relative;
+  @apply bg-black p-5 pl-7 text-text-onblack relative my-5 md:my-0;
 }
 
 .review::after {
@@ -174,11 +179,13 @@ body {
 }
 
 .row {
-  @apply w-full flex flex-row items-stretch;
+  @apply w-full flex flex-col md:flex-row md:items-stretch;
 }
 
 .discord-bot-feature {
-  @apply w-1/2
+  @apply w-full md:w-1/2
+  mt-6
+  md:mt-0
   mr-4
   border-val border-4
   hover:bg-val
