--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ body {
         flex flex-row
         items-center
         justify-center
-        md:justify-items-start
+        xl:justify-items-start
         transition-all z-50;
 }
 
@@ -37,7 +37,7 @@ body {
 }
 
 .section-header {
-  @apply text-white text-3xl md:text-5xl uppercase font-black tracking-tighter;
+  @apply text-white text-3xl xl:text-5xl uppercase font-black tracking-tighter;
 }
 
 .card {
@@ -88,7 +88,7 @@ body {
 
 .decoration {
   @apply absolute hidden
-  md:block;
+  xl:block;
 }
 
 .decoration-p3ntest {
@@ -101,7 +101,7 @@ body {
 }
 
 .socials {
-  @apply w-full md:w-80
+  @apply w-full xl:w-80
               bg-main-dark
               flex flex-row
               items-stretch
@@ -131,7 +131,7 @@ body {
 }
 
 .service {
-  @apply mr-4 mb-7 md:mb-0 md:w-1/2 border-4 border-white-light hover:border-val flex flex-col justify-items-stretch items-stretch h-64 transition-all;
+  @apply mr-4 mb-7 xl:mb-0 xl:w-1/2 border-4 border-white-light hover:border-val flex flex-col justify-items-stretch items-stretch h-64 transition-all;
 }
 
 .service-footer {
@@ -140,7 +140,7 @@ body {
   text-white
   font-black
   text-lg
-  md:text-xl
+  xl:text-xl
   px-4
   p-3
   transition-all;
@@ -158,7 +158,7 @@ body {
 }
 
 .review {
-  @apply bg-black p-5 pl-7 text-text-onblack relative my-5 md:my-0;
+  @apply bg-black p-5 pl-7 text-text-onblack relative my-5 xl:my-0;
 }
 
 .review::after {
@@ -179,14 +179,14 @@ body {
 }
 
 .row {
-  @apply w-full flex flex-col md:flex-row md:items-stretch;
+  @apply w-full flex flex-col xl:flex-row xl:items-stretch;
 }
 
 .discord-bot-feature {
-  @apply w-full md:w-1/2
+  @apply w-full xl:w-1/2
   relative
   mt-6
-  md:mt-0
+  xl:mt-0
   mr-4
   bg-main
   /* border-val border-4 */
